--- a/meas.tex
+++ b/meas.tex
@@ -133,6 +133,7 @@ The pandora algorithm utilizes it's own clustering algorithm and will be detaile
 \subsection{Pandora}
 
 \subsection{Trackkalmanhit}
+The trackkalmanhit algorithm takes 2D clusters returned from the fuzzy cluster algorithm and outputs track objects. There are no hierarchy structure as it is in pandora, each track is independent. There also is no vertex reconstruction with this algorithm as well.
 \subsection{Cosmic Hit Removal}
 \subsection{Projection Matching Algorithm}
 \subsection{Calorimetry}
